--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "alpinejs": "^3.14.9",
         "datatables.net": "^2.3.2",
         "datatables.net-bs5": "^2.3.2",
