--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "flatpickr": "^4.6.13",
         "jquery": "^3.7.1",
         "slim-select": "^2.11.0",
+        "sweetalert2": "^11.22.1",
         "tom-select": "^2.4.3"
     }
 }
